docs: add documentation for handlers
